refactor: Service 레이어에서 다른 도메인의 Repository 직접 사용하지 않도록 수정     - Cotroller 레이어 ResponseEntity 생성 방식도 통일